Rendu4/_build/parser.output
   0  $accept : %entry% $end

   1  main : expression_init EOF

   2  expression_init : expression
   3                  | LET motif EGAL expression PVDOUBLE expression_init

   4  expression : atomique
   5             | IF expression THEN expression ELSE expression
   6             | LET motlist2 EGAL expression IN expression
   7             | LET motif EGAL expression IN expression
   8             | FUN motlist TO expression
   9             | expression PLUS expression
  10             | expression TIMES expression
  11             | expression DIV expression
  12             | expression MINUS expression
  13             | MINUS expression
  14             | expression LE expression
  15             | expression GE expression
  16             | expression AND expression
  17             | expression OR expression
  18             | expression EGAL expression
  19             | expression NE expression
  20             | expression GT expression
  21             | expression LT expression
  22             | NOT expression
  23             | expression atomique
  24             | LET REC motlist2 EGAL expression IN expression
  25             | LET REC STR EGAL expression IN expression
  26             | expression ASS expression
  27             | tuples
  28             | expression CONS expression
  29             | expression PTV expression
  30             | MATCH expression WITH matching
  31             | MATCH expression WITH ORMATCH matching
  32             | RAISE exceptio
  33             | TRY expression WITH matchex
  34             | TRY expression WITH ORMATCH matchex

  35  atomique : BEGIN expression END
  36           | LPAREN expression RPAREN
  37           | INT
  38           | STR
  39           | LPAREN RPAREN
  40           | EVALREF atomique
  41           | liste
  42           | SND
  43           | FST
  44           | PRINT
  45           | REF

  46  exceptio : LPAREN exceptio RPAREN
  47           | EXCEPTION expression

  48  motlist2 : STR motif motlist
  49           | STR motif

  50  motlist : motif
  51          | motif motlist

  52  motif : INT
  53        | STR
  54        | tuplem
  55        | motif CONS motif
  56        | LPAREN motif RPAREN
  57        | BEGIN motif END
  58        | listem

  59  tuplem : tuplem VIRGULE motif
  60         | motif VIRGULE motif

  61  tuples : tuples VIRGULE expression
  62         | expression VIRGULE expression

  63  matching : motif TO expression ORMATCH matching
  64           | motif TO expression

  65  matchex : EXCEPTION motif TO expression ORMATCH matchex
  66          | EXCEPTION motif TO expression

  67  liste : LCROCH RCROCH
  68        | LCROCH elts

  69  elts : expression RCROCH
  70       | expression PTV elts

  71  listem : LCROCH RCROCH
  72         | LCROCH eltsm

  73  eltsm : motif PTV eltsm
  74        | motif RCROCH

  75  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (75)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 7
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	main  goto 21
	expression_init  goto 22
	expression  goto 23
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomique : INT .  (37)

	.  reduce 37


state 4
	atomique : STR .  (38)

	.  reduce 38


state 5
	atomique : PRINT .  (44)

	.  reduce 44


state 6
	expression : MINUS . expression  (13)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 28
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 7
	expression_init : LET . motif EGAL expression PVDOUBLE expression_init  (3)
	expression : LET . motlist2 EGAL expression IN expression  (6)
	expression : LET . motif EGAL expression IN expression  (7)
	expression : LET . REC motlist2 EGAL expression IN expression  (24)
	expression : LET . REC STR EGAL expression IN expression  (25)

	INT  shift 29
	STR  shift 30
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	REC  shift 34
	.  error

	motif  goto 35
	motlist2  goto 36
	tuplem  goto 37
	listem  goto 38


state 8
	expression : IF . expression THEN expression ELSE expression  (5)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 39
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 9
	expression : NOT . expression  (22)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 40
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 10
	atomique : EVALREF . atomique  (40)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FST  shift 19
	SND  shift 20
	.  error

	atomique  goto 41
	liste  goto 26


state 11
	atomique : REF .  (45)

	.  reduce 45


state 12
	atomique : LPAREN . expression RPAREN  (36)
	atomique : LPAREN . RPAREN  (39)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	RPAREN  shift 42
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 43
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 13
	atomique : BEGIN . expression END  (35)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 44
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 14
	liste : LCROCH . RCROCH  (67)
	liste : LCROCH . elts  (68)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	RCROCH  shift 45
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 46
	atomique  goto 24
	tuples  goto 25
	liste  goto 26
	elts  goto 47


state 15
	expression : FUN . motlist TO expression  (8)

	INT  shift 29
	STR  shift 48
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	.  error

	motif  goto 49
	motlist  goto 50
	tuplem  goto 37
	listem  goto 38


state 16
	expression : TRY . expression WITH matchex  (33)
	expression : TRY . expression WITH ORMATCH matchex  (34)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 51
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 17
	expression : RAISE . exceptio  (32)

	LPAREN  shift 52
	EXCEPTION  shift 53
	.  error

	exceptio  goto 54


state 18
	expression : MATCH . expression WITH matching  (30)
	expression : MATCH . expression WITH ORMATCH matching  (31)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	MINUS  shift 6
	LET  shift 27
	IF  shift 8
	NOT  shift 9
	EVALREF  shift 10
	REF  shift 11
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FUN  shift 15
	TRY  shift 16
	RAISE  shift 17
	MATCH  shift 18
	FST  shift 19
	SND  shift 20
	.  error

	expression  goto 55
	atomique  goto 24
	tuples  goto 25
	liste  goto 26


state 19
	atomique : FST .  (43)

	.  reduce 43


state 20
	atomique : SND .  (42)

	.  reduce 42


state 21
	%entry% : '\001' main .  (75)

	.  reduce 75


state 22
	main : expression_init . EOF  (1)

	EOF  shift 56
	.  error


state 23
	expression_init : expression .  (2)
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	tuples : expression . VIRGULE expression  (62)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	PLUS  shift 57
	TIMES  shift 58
	DIV  shift 59
	MINUS  shift 60
	EGAL  shift 61
	PTV  shift 62
	VIRGULE  shift 63
	CONS  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	AND  shift 69
	OR  shift 70
	NE  shift 71
	EVALREF  shift 10
	REF  shift 11
	ASS  shift 72
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FST  shift 19
	SND  shift 20
	EOF  reduce 2

	atomique  goto 73
	liste  goto 26


state 24
	expression : atomique .  (4)

	.  reduce 4


state 25
	expression : tuples .  (27)
	tuples : tuples . VIRGULE expression  (61)

	VIRGULE  shift 74
	INT  reduce 27
	STR  reduce 27
	PRINT  reduce 27
	PLUS  reduce 27
	TIMES  reduce 27
	DIV  reduce 27
	MINUS  reduce 27
	IN  reduce 27
	EGAL  reduce 27
	PVDOUBLE  reduce 27
	PTV  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	CONS  reduce 27
	LT  reduce 27
	LE  reduce 27
	GT  reduce 27
	GE  reduce 27
	AND  reduce 27
	OR  reduce 27
	NE  reduce 27
	EVALREF  reduce 27
	REF  reduce 27
	ASS  reduce 27
	LPAREN  reduce 27
	RPAREN  reduce 27
	BEGIN  reduce 27
	END  reduce 27
	RCROCH  reduce 27
	LCROCH  reduce 27
	ORMATCH  reduce 27
	WITH  reduce 27
	FST  reduce 27
	SND  reduce 27
	EOF  reduce 27


state 26
	atomique : liste .  (41)

	.  reduce 41


state 27
	expression : LET . motlist2 EGAL expression IN expression  (6)
	expression : LET . motif EGAL expression IN expression  (7)
	expression : LET . REC motlist2 EGAL expression IN expression  (24)
	expression : LET . REC STR EGAL expression IN expression  (25)

	INT  shift 29
	STR  shift 30
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	REC  shift 34
	.  error

	motif  goto 75
	motlist2  goto 36
	tuplem  goto 37
	listem  goto 38


state 28
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : MINUS expression .  (13)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	tuples : expression . VIRGULE expression  (62)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	EVALREF  shift 10
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	PLUS  reduce 13
	TIMES  reduce 13
	DIV  reduce 13
	MINUS  reduce 13
	IN  reduce 13
	EGAL  reduce 13
	PVDOUBLE  reduce 13
	PTV  reduce 13
	VIRGULE  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	CONS  reduce 13
	LT  reduce 13
	LE  reduce 13
	GT  reduce 13
	GE  reduce 13
	AND  reduce 13
	OR  reduce 13
	NE  reduce 13
	REF  reduce 13
	ASS  reduce 13
	RPAREN  reduce 13
	END  reduce 13
	RCROCH  reduce 13
	ORMATCH  reduce 13
	WITH  reduce 13
	FST  reduce 13
	SND  reduce 13
	EOF  reduce 13

	atomique  goto 73
	liste  goto 26


state 29
	motif : INT .  (52)

	.  reduce 52


state 30
	motlist2 : STR . motif motlist  (48)
	motlist2 : STR . motif  (49)
	motif : STR .  (53)

	INT  shift 29
	STR  shift 48
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	EGAL  reduce 53
	VIRGULE  reduce 53
	CONS  reduce 53

	motif  goto 76
	tuplem  goto 37
	listem  goto 38


state 31
	motif : LPAREN . motif RPAREN  (56)

	INT  shift 29
	STR  shift 48
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	.  error

	motif  goto 77
	tuplem  goto 37
	listem  goto 38


state 32
	motif : BEGIN . motif END  (57)

	INT  shift 29
	STR  shift 48
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	.  error

	motif  goto 78
	tuplem  goto 37
	listem  goto 38


state 33
	listem : LCROCH . RCROCH  (71)
	listem : LCROCH . eltsm  (72)

	INT  shift 29
	STR  shift 48
	LPAREN  shift 31
	BEGIN  shift 32
	RCROCH  shift 79
	LCROCH  shift 33
	.  error

	motif  goto 80
	tuplem  goto 37
	listem  goto 38
	eltsm  goto 81


state 34
	expression : LET REC . motlist2 EGAL expression IN expression  (24)
	expression : LET REC . STR EGAL expression IN expression  (25)

	STR  shift 82
	.  error

	motlist2  goto 83


state 35
	expression_init : LET motif . EGAL expression PVDOUBLE expression_init  (3)
	expression : LET motif . EGAL expression IN expression  (7)
	motif : motif . CONS motif  (55)
	tuplem : motif . VIRGULE motif  (60)

	EGAL  shift 84
	VIRGULE  shift 85
	CONS  shift 86
	.  error


state 36
	expression : LET motlist2 . EGAL expression IN expression  (6)

	EGAL  shift 87
	.  error


state 37
	motif : tuplem .  (54)
	tuplem : tuplem . VIRGULE motif  (59)

	VIRGULE  shift 88
	INT  reduce 54
	STR  reduce 54
	EGAL  reduce 54
	PTV  reduce 54
	CONS  reduce 54
	LPAREN  reduce 54
	RPAREN  reduce 54
	BEGIN  reduce 54
	END  reduce 54
	RCROCH  reduce 54
	LCROCH  reduce 54
	TO  reduce 54


state 38
	motif : listem .  (58)

	.  reduce 58


state 39
	expression : IF expression . THEN expression ELSE expression  (5)
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	tuples : expression . VIRGULE expression  (62)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	PLUS  shift 57
	TIMES  shift 58
	DIV  shift 59
	MINUS  shift 60
	EGAL  shift 61
	PTV  shift 62
	VIRGULE  shift 63
	THEN  shift 89
	CONS  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	AND  shift 69
	OR  shift 70
	NE  shift 71
	EVALREF  shift 10
	REF  shift 11
	ASS  shift 72
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	FST  shift 19
	SND  shift 20
	.  error

	atomique  goto 73
	liste  goto 26


state 40
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : NOT expression .  (22)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	tuples : expression . VIRGULE expression  (62)

	INT  shift 3
	STR  shift 4
	LPAREN  shift 12
	BEGIN  shift 13
	LCROCH  shift 14
	PRINT  reduce 22
	PLUS  reduce 22
	TIMES  reduce 22
	DIV  reduce 22
	MINUS  reduce 22
	IN  reduce 22
	EGAL  reduce 22
	PVDOUBLE  reduce 22
	PTV  reduce 22
	VIRGULE  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	CONS  reduce 22
	LT  reduce 22
	LE  reduce 22
	GT  reduce 22
	GE  reduce 22
	AND  reduce 22
	OR  reduce 22
	NE  reduce 22
	EVALREF  reduce 22
	REF  reduce 22
	ASS  reduce 22
	RPAREN  reduce 22
	END  reduce 22
	RCROCH  reduce 22
	ORMATCH  reduce 22
	WITH  reduce 22
	FST  reduce 22
	SND  reduce 22
	EOF  reduce 22

	atomique  goto 73
	liste  goto 26


state 41
	atomique : EVALREF atomique .  (40)

	.  reduce 40


state 42
	atomique : LPAREN RPAREN .  (39)

	.  reduce 39


state 43
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	atomique : LPAREN expression . RPAREN  (36)
	tuples : expression . VIRGULE expression  (62)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	PLUS  shift 57
	TIMES  shift 58
	DIV  shift 59
	MINUS  shift 60
	EGAL  shift 61
	PTV  shift 62
	VIRGULE  shift 63
	CONS  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	AND  shift 69
	OR  shift 70
	NE  shift 71
	EVALREF  shift 10
	REF  shift 11
	ASS  shift 72
	LPAREN  shift 12
	RPAREN  shift 90
	BEGIN  shift 13
	LCROCH  shift 14
	FST  shift 19
	SND  shift 20
	.  error

	atomique  goto 73
	liste  goto 26


state 44
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	atomique : BEGIN expression . END  (35)
	tuples : expression . VIRGULE expression  (62)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	PLUS  shift 57
	TIMES  shift 58
	DIV  shift 59
	MINUS  shift 60
	EGAL  shift 61
	PTV  shift 62
	VIRGULE  shift 63
	CONS  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	AND  shift 69
	OR  shift 70
	NE  shift 71
	EVALREF  shift 10
	REF  shift 11
	ASS  shift 72
	LPAREN  shift 12
	BEGIN  shift 13
	END  shift 91
	LCROCH  shift 14
	FST  shift 19
	SND  shift 20
	.  error

	atomique  goto 73
	liste  goto 26


state 45
	liste : LCROCH RCROCH .  (67)

	.  reduce 67


state 46
	expression : expression . PLUS expression  (9)
	expression : expression . TIMES expression  (10)
	expression : expression . DIV expression  (11)
	expression : expression . MINUS expression  (12)
	expression : expression . LE expression  (14)
	expression : expression . GE expression  (15)
	expression : expression . AND expression  (16)
	expression : expression . OR expression  (17)
	expression : expression . EGAL expression  (18)
	expression : expression . NE expression  (19)
	expression : expression . GT expression  (20)
	expression : expression . LT expression  (21)
	expression : expression . atomique  (23)
	expression : expression . ASS expression  (26)
	expression : expression . CONS expression  (28)
	expression : expression . PTV expression  (29)
	tuples : expression . VIRGULE expression  (62)
	elts : expression . RCROCH  (69)
	elts : expression . PTV elts  (70)

	INT  shift 3
	STR  shift 4
	PRINT  shift 5
	PLUS  shift 57
	TIMES  shift 58
	DIV  shift 59
	MINUS  shift 60
	EGAL  shift 61
	PTV  shift 92
	VIRGULE  shift 63
	CONS  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	AND  shift 69
	OR  shift 70
	NE  shift 71
	EVALREF  shift 10
	REF  shift 11
	ASS  shift 72
	LPAREN  shift 12
	BEGIN  shift 13
	RCROCH  shift 93
	LCROCH  shift 14
	FST  shift 19
	SND  shift 20
	.  error

	atomique  goto 73
	liste  goto 26


state 47
	liste : LCROCH elts .  (68)

	.  reduce 68


state 48
	motif : STR .  (53)

	.  reduce 53


state 49
	motlist : motif .  (50)
	motlist : motif . motlist  (51)
	motif : motif . CONS motif  (55)
	tuplem : motif . VIRGULE motif  (60)

	INT  shift 29
	STR  shift 48
	VIRGULE  shift 85
	CONS  shift 86
	LPAREN  shift 31
	BEGIN  shift 32
	LCROCH  shift 33
	EGAL  reduce 50
	TO  reduce 50

	motif  goto 49
	motlist  goto 94
	tuplem  goto 37
	listem  goto 38


state 50
	expression : FUN motlist . TO expression  (8)

	TO  shift 95
	.  error

